# buyer-stage-prediction

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
api/: main.py
config/: pipeline.example.yaml
dashboard/: README.md  __init__.py  app.py  service.py
docs/: ADAPTING.md  ARCHITECTURE.md  LICENSES.md
examples/buyer_stage/: README.md  feature_spec.yaml  label_collapse.py  label_join.sql  pipeline.yaml  seed_raw.py  synth.py
examples/buyer_stage/golden/: column_order.txt
examples/buyer_stage/sample_data/: README.md
infra/helm/: README.md
infra/opentofu/: main.tf
scripts/: new_example.py  regen_golden.py  smoke_predict.py
src/automl_template/: __init__.py  cli.py  config.py  constants.py  errors.py  pipeline.py  runtime.py
src/automl_template/compute/: __init__.py  base.py  duckdb_backend.py
src/automl_template/dagster_defs/: __init__.py  asset_checks.py  assets.py  definitions.py  schedules.py  sensors.py
src/automl_template/etl/: __init__.py  reshape.py  shaping.py
src/automl_template/ml/: __init__.py  automl.py  registry.py  scoring.py
src/automl_template/monitoring/: __init__.py  drift.py
src/automl_template/notify/: __init__.py  apprise_client.py
src/automl_template/schemas/: __init__.py  feature_schema.py
src/automl_template/store/: __init__.py  models.py  offline.py  online.py
tests/: conftest.py  test_dagster_pipeline.py  test_end_to_end.py  test_point_in_time.py  test_promotion.py  test_reshape.py  test_schemas.py
