[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabular-automl-template"
version = "0.1.0"
description = "Domain-agnostic, single-node, docker-compose-portable tabular AutoML batch-scoring-to-online-store pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

# Pins reflect docs/ARCHITECTURE.md §2. Keep the default install 100% permissive.
dependencies = [
    "dagster~=1.9",
    "dagster-webserver~=1.9",
    "duckdb~=1.1",
    "polars~=1.0",
    "pandas~=2.2",            # only at the FLAML boundary
    "pyarrow~=17.0",
    "flaml[automl]~=2.3",
    "scikit-learn~=1.5",
    "mlflow~=2.18",
    "pandera~=0.20",
    "evidently==0.7.21",     # pinned Apache-2.0 release; SaaS extras excluded
    "apprise~=1.9",
    "pydantic~=2.9",
    "pydantic-settings~=2.5",
    "pyyaml~=6.0",
    "sqlalchemy~=2.0",
    "pg8000~=1.31",          # BSD-3 pure-python driver; avoids psycopg LGPL
    "fastapi~=0.115",
    "uvicorn[standard]~=0.32",
    "prometheus-client~=0.21",
]

[project.optional-dependencies]
# Heavier / different-license backends are opt-in (see docs/LICENSES.md).
autogluon = ["autogluon.tabular~=1.1"]
spark = ["pyspark~=3.5"]
dev = [
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "ruff~=0.6",
    "mypy~=1.11",
    "httpx~=0.27",   # FastAPI TestClient + the demo smoke check
]

[project.scripts]
# Convenience CLI entrypoints (thin wrappers around the framework).
automl-seed = "automl_template.cli:seed"
automl-run = "automl_template.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/automl_template"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["automl_template"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true

# Don't analyze (untyped) third-party stubs — some ship PEP 695 syntax that trips a 3.11
# target, and we only want to type-check our own code.
[[tool.mypy.overrides]]
module = [
    "numpy.*", "pandas.*", "polars.*", "pyarrow.*", "flaml.*", "mlflow.*",
    "dagster.*", "duckdb.*", "evidently.*", "apprise.*", "sklearn.*",
]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]   # "." so tests can import the `examples` package
addopts = "-q"
